objects/TASKRAY__trSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for using TaskRay</description>
    <fields>
        <fullName>TASKRAY__trAlwaysShowProjectSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always show the search inputs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCurrentColumnSortType__c</fullName>
        <label>trCurrentColumnSortType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCurrentFilterView__c</fullName>
        <label>trCurrentFilterView</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCurrentPowerFilter__c</fullName>
        <label>Current power filter for user</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCurrentProjectRecordType__c</fullName>
        <label>trCurrentProjectRecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCurrentRowViewGroup__c</fullName>
        <label>trCurrentRowViewGroup__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCurrentTaskRecordType__c</fullName>
        <label>trCurrentTaskRecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCurrentView__c</fullName>
        <label>trCurrentView</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDailyNotifications__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Daily Summary Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDisableQuotes__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDisableTaskReassignEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Task Reassign Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDisplaySetupWizard__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Restart Getting Started Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDisplayUnassignedTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Personal Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDoNotDisplayNewFeatureNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide new feature notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDoNotDisplayNewReleaseModal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide new release modal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDoNotShowInitialTour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide the initial TaskRay tour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDynamicFilterProjectFilterId__c</fullName>
        <externalId>true</externalId>
        <label>Dynamic Power Filter - Project Filter Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDynamicFilterTaskFilterId__c</fullName>
        <externalId>true</externalId>
        <label>Dynamic Power Filter - Task Filter Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableQuotes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show loading mask quotes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHiddenBoardFilters__c</fullName>
        <externalId>true</externalId>
        <label>Hidden board filters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInboxViewAsUser__c</fullName>
        <label>Inbox View As User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOptedIntoUserEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User opted into user email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPlanViewZoomLevel__c</fullName>
        <label>trPlanViewZoomLevel__c</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trReverseColumns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Columns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trSPSearchShowSubs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show sub projects on single project view</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trSelectedGroup__c</fullName>
        <label>trSelectedGroup</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trSelectedLists__c</fullName>
        <label>trSelectedLists</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trSingleProjectViewId__c</fullName>
        <label>Project Id for the Single Project view</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trSlackUserId__c</fullName>
        <externalId>true</externalId>
        <label>Slack User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStandardViewSortOrders__c</fullName>
        <label>Standard View Sort Orders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUnfollowArchived__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto-unfollow Archived Project Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trViewShowCount__c</fullName>
        <label>Count of views to show</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TaskRay Settings</label>
</CustomObject>